src/objects/Account_Asset__c.object
<CustomObject>
    <fields>
        <fullName>Card_Program__c</fullName>
        <description>Copied from Opportunity</description>
        <formula>Opportunity__r.Card_Program__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Copied from Opportunity</inlineHelpText>
        <label>Card Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cards_Allowed_to_be_Issued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cards Allowed to be Issued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cards_Created__c</fullName>
        <description>CorporatePay</description>
        <label>Cards Created</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cards_Received__c</fullName>
        <description>CorporatePay</description>
        <label>Cards Received</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cards_Shipped__c</fullName>
        <description>Loaded when UPS information is loaded to the Online Application</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Loaded when UPS information is loaded to the Online Application</inlineHelpText>
        <label>Cards Shipped</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Client_Account_Number_10__c</fullName>
        <label>Client Account Number 10</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Account_Number_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Account Number 2</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Client_Account_Number_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Account Number 3</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Client_Account_Number__c</fullName>
        <description>CorporatePay</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>The account number on the portal. For prepaid accounts.</inlineHelpText>
        <label>Client Account Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Infomed__c</fullName>
        <description>CorporatePay</description>
        <label>Client Infomed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_Op_Fund_Reimbursement__c</fullName>
        <label>Reimbursement Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Co_Op_Fund__c</fullName>
        <label>Co-Op Fund</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Reimbursed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comdata_Fired__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comdata Fired</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comdata_Ordered__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comdata Ordered</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>We need a comment field inserted below agreement length.

Comments:

Text with date/time stamp

[cid:image005.png@01CF5970.9B6E2590]

Lisa Garside
Vice President, Operations</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter comments regarding this asset.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Tax_ID_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Tax ID Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Address__c</fullName>
        <formula>Contact__r.MailingStreet &amp; BR()&amp;
 Contact__r.MailingCity &amp; &quot;, &quot; &amp; Contact__r.MailingState &amp;&quot; &quot;&amp; Contact__r.MailingPostalCode &amp; BR()&amp;
 Contact__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Fax__c</fullName>
        <formula>Contact__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Other_Address__c</fullName>
        <formula>Contact__r.OtherStreet  &amp; BR()&amp;
 Contact__r.OtherCity &amp; &quot;, &quot; &amp; Contact__r.OtherState &amp;&quot; &quot;&amp;  Contact__r.OtherPostalCode  &amp; BR()&amp;
 Contact__r.OtherCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Other Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Assets</relationshipLabel>
        <relationshipName>Account_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End/Terminate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Renewal_Date__c</fullName>
        <description>Date that the Contract is up for Renewal</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the date that the Contract is up for Renewal</inlineHelpText>
        <label>Contract Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Renewal_Period__c</fullName>
        <label>Contract Renewal Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 year</fullName>
                </value>
                <value>
                    <fullName>2 years</fullName>
                </value>
                <value>
                    <fullName>3 years</fullName>
                </value>
                <value>
                    <fullName>4 years</fullName>
                </value>
                <value>
                    <fullName>5 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contracts_Database_Updated__c</fullName>
        <description>CorporatePay</description>
        <label>Contracts Database Updated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>TBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conversion_From_Optical_Cards__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conversion From Optical Cards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_Card_Created__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Core Card Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CorporatePay__c</fullName>
        <label>CorporatePay Account Asset Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CP_Disbursement</fullName>
                </value>
                <value>
                    <fullName>CP_Virtual Credit</fullName>
                </value>
                <value>
                    <fullName>CP_Virtual Prepaid MC</fullName>
                </value>
                <value>
                    <fullName>CP_Virtual Prepaid VE</fullName>
                </value>
                <value>
                    <fullName>CP_Expense-General Expense</fullName>
                </value>
                <value>
                    <fullName>CP_Expense-Tour</fullName>
                </value>
                <value>
                    <fullName>CP_Expense-Petty Cash</fullName>
                </value>
                <value>
                    <fullName>CP_Expense- Crew</fullName>
                </value>
                <value>
                    <fullName>CP_Expense_UTB_Consumer</fullName>
                </value>
                <value>
                    <fullName>CP_Expense_UTB_Corporate</fullName>
                </value>
                <value>
                    <fullName>CP_Bespoke</fullName>
                </value>
                <value>
                    <fullName>CP_Bespoke_Platform</fullName>
                </value>
                <value>
                    <fullName>CP_Bespoke_Currency_Card</fullName>
                </value>
                <value>
                    <fullName>CP_Bespoke_MTC</fullName>
                </value>
                <value>
                    <fullName>CP_Bespoke_Transport_and_Haulage</fullName>
                </value>
                <value>
                    <fullName>CP_CurrencyCard_ MTC_MC</fullName>
                </value>
                <value>
                    <fullName>CP_CurrencyCard_WL_MC</fullName>
                </value>
                <value>
                    <fullName>CP_CurrencyCard_WL_Visa</fullName>
                </value>
                <value>
                    <fullName>CP_Other_Revenue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Line_Approved__c</fullName>
        <formula>Opportunity__r.Application_Request__r.Approved_Credit_Limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Line Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_National_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit National ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cross_Roads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cross Roads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>TEXT (CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Security_Amount__c</fullName>
        <label>Original Security Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <formula>text(Opportunity__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Form_Reviewed_and_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Due Diligence Form Completed and Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Opened__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_to_FSV_Bancorp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Due Diligence Sent to Bank</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_signed_by_Client__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date signed by Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Requested__c</fullName>
        <description>CorporatePay</description>
        <label>Demo Requested</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>TBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disclosure_Receipt_on_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disclosure Receipt on File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dual_Marketer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dual Marketer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Stage__c</fullName>
        <label>Due Diligence Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Form Reviewed and Sent</fullName>
                </value>
                <value>
                    <fullName>Signed By Client</fullName>
                </value>
                <value>
                    <fullName>Submitted to FSV/Bancorp</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Early_Pay_Rebate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Early Pay Rebate</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enrollment_Methodology__c</fullName>
        <label>Estimated Enrollment Methodology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mandate</fullName>
                </value>
                <value>
                    <fullName>Voluntary</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F1_Account__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>F1 Account #</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FP_Fee__c</fullName>
        <label>FP Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FP_Gallons__c</fullName>
        <label>FP Gallons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FP_Month_Year__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FP Month/Year</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Fee__c</fullName>
        <label>FS Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FS_Gallons__c</fullName>
        <label>FS Gallons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FS_Month_year__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FS Month/year</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <formula>Account__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Waived_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fee Waived Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fees_Set_Up__c</fullName>
        <label>Fees Set Up</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fees_Waived_Amount__c</fullName>
        <label>Fees Waived Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fees_Waived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fees Waived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fire_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fire_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fire Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Pay_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Pay Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Transaction_Date__c</fullName>
        <description>Date when customer started making transactions</description>
        <encryptionScheme>None</encryptionScheme>
        <label>First Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fleet_Size__c</fullName>
        <formula>Opportunity__r.Fleet_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fleet Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Franchise_Renewal_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Franchise Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gallons_Last_Three_Months__c</fullName>
        <description>Sum of Gallons for the Current Month + last 2 months.  Updated by Rollup Batch.</description>
        <inlineHelpText>Sum of Gallons for the Current Month + last 2 months.  Updated by Rollup Batch.</inlineHelpText>
        <label>Gallons Last Three Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gallons_MTD__c</fullName>
        <label>Gallons MTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gallons_Updated__c</fullName>
        <description>This is the date that the Gallons MTD was updated.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is the date that the Gallons MTD was updated.</inlineHelpText>
        <label>Gallons Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gallons_YTD__c</fullName>
        <description>Set by batch to sum all yearly data from Gallons Data.</description>
        <inlineHelpText>Set by batch to sum all yearly data from Gallons Data.</inlineHelpText>
        <label>Gallons YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gallons_per_Month__c</fullName>
        <label>Gallons per Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generic_Card_Request__c</fullName>
        <description>CorporatePay</description>
        <label>Generic Card Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Go_Live_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Go-Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Govt_Extentions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Govt Extentions/Evergreen</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Growth_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Growth Notes</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>High_Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historical_Account_Asset__c</fullName>
        <label>Date of Last Data Update</label>
        <summarizedField>Historical_Account_Asset__c.CreatedDate</summarizedField>
        <summaryForeignKey>Historical_Account_Asset__c.Account_Asset_MD__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Host_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Host Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Increase_or_Decrease_Amount__c</fullName>
        <label>Increase or Decrease Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Information_Last_Updated_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Automatically displays the date &amp; time when the application information was last updated by the Sales / RM team</inlineHelpText>
        <label>Information Last Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Information_Requested_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the information that you require, this will be emailed to the Opportunity Owner. Start notes with dd/mm -</inlineHelpText>
        <label>Information Requested Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Information_Updated_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a summary of the information that you have added, this will be emailed to the Customer Services inbox. Start notes with dd/mm -</inlineHelpText>
        <label>Information Updated Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Batch_Registration__c</fullName>
        <label>Initial Batch Registration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inspection_Year__c</fullName>
        <label>Inspection Year</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1990</fullName>
                </value>
                <value>
                    <fullName>1991</fullName>
                </value>
                <value>
                    <fullName>1992</fullName>
                </value>
                <value>
                    <fullName>1993</fullName>
                </value>
                <value>
                    <fullName>1994</fullName>
                </value>
                <value>
                    <fullName>1995</fullName>
                </value>
                <value>
                    <fullName>1996</fullName>
                </value>
                <value>
                    <fullName>1997</fullName>
                </value>
                <value>
                    <fullName>1998</fullName>
                </value>
                <value>
                    <fullName>1999</fullName>
                </value>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>2001</fullName>
                </value>
                <value>
                    <fullName>2002</fullName>
                </value>
                <value>
                    <fullName>2003</fullName>
                </value>
                <value>
                    <fullName>2004</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Install_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Install Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Installer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Cancelation_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Insurance Cancelation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Carrier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Insurance Carrier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Deadline_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Insurance Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Expiration_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Insurance Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interest_in_Adding_Sites__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interest in Adding Sites</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KYB_Passed__c</fullName>
        <label>KYB Passed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KYC_Passed__c</fullName>
        <label>KYC Passed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Activity__c</fullName>
        <description>updated from IT for marketing automation</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>updated from IT for marketing automation</inlineHelpText>
        <label>Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Legal Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Affinity</fullName>
                </value>
                <value>
                    <fullName>Direct Universal</fullName>
                </value>
                <value>
                    <fullName>Cobrand</fullName>
                </value>
                <value>
                    <fullName>Private Label</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Logo_Set_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Logo Set Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCC_Blocks__c</fullName>
        <description>CorporatePay</description>
        <label>MCC Blocks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MCC_Restrictions__c</fullName>
        <label>MCC Restrictions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MC_Account__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MC Account #</label>
        <length>16</length>
        <type>Text</type>
    </fields>
</CustomObject>